# PaperDock

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  Trunk.toml  index.html  styles.css
docs/: index.html
docs/demo/: README.md  demo-manuscript.docx
docs/superpowers/plans/: 2026-07-02-paperdock-admin-config.md  2026-07-05-manuscript-citation-audit.md
docs/superpowers/specs/: 2026-06-30-paperdock-v1-design.md  2026-07-02-paperdock-admin-config-design.md  2026-07-04-paperdock-v1-citation-audit-design.md
feedback/: README.md  worker.js  wrangler.toml
sidecar/: paperdock_worker.py  test_audit.py  test_parse.py
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json  team_config.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  sidecar.rs  zotero.rs
