[package]
name = "paperdock-ui"
version = "0.2.0"
edition = "2021"
description = "PaperDock v1 Leptos CSR frontend"

# NOTE: intentionally NO [workspace] table. src-tauri is a separate,
# independent crate with its own Cargo.toml; Trunk builds only this crate.

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "HtmlInputElement",
    "HtmlSelectElement",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
